--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -335,6 +335,7 @@
     "print(merged_df.head())\n",
     "# TODO: Save results as 'output/q1_aggregation_report.txt'\n",
     "with open('output/q1_aggregation_report.txt', 'w') as f:\n",
+    "    f.write(\"Assignment 8 - Data Aggregation Report:\\n\")\n",
     "    f.write(merged_df.to_string())"
    ]
   },
@@ -439,7 +440,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/mh/sw2lkzcs6t584_k0k6jc4lyc0000gn/T/ipykernel_5329/2495685886.py:33: FutureWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "/var/folders/mh/sw2lkzcs6t584_k0k6jc4lyc0000gn/T/ipykernel_6597/250071426.py:33: FutureWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
       "  top_providers_by_facility = merged_df.groupby('facility_name').apply(\n"
      ]
     }
@@ -483,6 +484,7 @@
     "\n",
     "# TODO: Save results as 'output/q2_performance_report.txt'\n",
     "with open('output/q2_performance_report.txt', 'w') as f:\n",
+    "    f.write(\"Assignment 8 - Top Providers by Facility:\\n\")\n",
     "    f.write(top_providers_by_facility.to_string())"
    ]
   },
@@ -498,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "dcf4598c",
    "metadata": {},
    "outputs": [
@@ -544,7 +546,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/mh/sw2lkzcs6t584_k0k6jc4lyc0000gn/T/ipykernel_5329/2186212955.py:10: FutureWarning: The previous implementation of stack is deprecated and will be removed in a future version of pandas. See the What's New notes for pandas 2.1.0 for details. Specify future_stack=True to adopt the new implementation and silence this warning.\n",
+      "/var/folders/mh/sw2lkzcs6t584_k0k6jc4lyc0000gn/T/ipykernel_6597/2186212955.py:10: FutureWarning: The previous implementation of stack is deprecated and will be removed in a future version of pandas. See the What's New notes for pandas 2.1.0 for details. Specify future_stack=True to adopt the new implementation and silence this warning.\n",
       "  long_facility_region_stats = wide_facility_region_stats.stack()\n"
      ]
     }
@@ -582,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "id": "e2c5f25b",
    "metadata": {},
    "outputs": [
@@ -694,7 +696,27 @@
       "99213            327262.66   259242.79   648648.87   135   657   547  1339  \n",
       "99214            322532.05   240095.41   634311.54   154   659   506  1319  \n",
       "99283             31172.21    24520.39    59694.01    12    67    48   127  \n",
-      "All             1619266.70  1247166.78  3201425.69   510  2505  1985  5000  \n"
+      "All             1619266.70  1247166.78  3201425.69   510  2505  1985  5000  \n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 11 entries, 36415 to All\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column          Non-Null Count  Dtype  \n",
+      "---  ------          --------------  -----  \n",
+      " 0   (mean, North)   11 non-null     float64\n",
+      " 1   (mean, South)   11 non-null     float64\n",
+      " 2   (mean, West)    11 non-null     float64\n",
+      " 3   (mean, All)     11 non-null     float64\n",
+      " 4   (sum, North)    11 non-null     float64\n",
+      " 5   (sum, South)    11 non-null     float64\n",
+      " 6   (sum, West)     11 non-null     float64\n",
+      " 7   (sum, All)      11 non-null     float64\n",
+      " 8   (count, North)  11 non-null     int64  \n",
+      " 9   (count, South)  11 non-null     int64  \n",
+      " 10  (count, West)   11 non-null     int64  \n",
+      " 11  (count, All)    11 non-null     int64  \n",
+      "dtypes: float64(8), int64(4)\n",
+      "memory usage: 1.1+ KB\n",
+      "None\n"
      ]
     }
    ],
@@ -741,11 +763,12 @@
     ")\n",
     "print(\"\\nPivot table with missing values filled:\")\n",
     "print(pivot_table_filled)\n",
+    "print(pivot_table_filled.info())\n",
     "\n",
     "# Tip: When saving a pivot table to CSV, the index (row labels) is preserved by default.\n",
     "#      This is usually desired - when reading back, use index_col=0 to restore the index.\n",
     "# TODO: Save results as 'output/q3_pivot_analysis.csv'\n",
-    "pivot_table_filled.to_csv('output/q3_pivot_analysis.csv')"
+    "pivot_table_filled.reset_index().to_csv('output/q3_pivot_analysis.csv')"
    ]
   },
   {
@@ -760,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "id": "f5643802",
    "metadata": {},
    "outputs": [
@@ -847,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "id": "243580f6",
    "metadata": {},
    "outputs": [
